# myst-demo

./: .gitignore  Makefile  README.md  environment.sh  pyproject.toml  ruff.toml
articles/article1/: article.yml  index.md  myst.yml  pyproject.toml
src/myst_demo/: configure_article.py  configure_myst.py
