#-------------------------------------------------------------------------------
# Project: myst-demo
#-------------------------------------------------------------------------------

[project]

name = "myst-demo"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
]

#-------------------------------------------------------------------------------
# uv
#-------------------------------------------------------------------------------

[tool.uv]

dev-dependencies = [
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.3",
    "mystmd>=1.3.18",
]
